--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,13 @@
 #
 ---
 include:
+  - board: nice_nano_v2
+    shield: totem_dongle
+  - board: nice_nano_v2
+    shield: settings_reset
   - board: seeeduino_xiao_ble
     shield: totem_left
   - board: seeeduino_xiao_ble
     shield: totem_right
-# there is no settingsreset (needed) for the XIAO
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
