--- a/build.yaml
+++ b/build.yaml
@@ -14,7 +14,7 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: totem_dongle
+    shield: totem_dongle nice_view_adapter dongle_display_view_pro_micro
   - board: nice_nano_v2
     shield: settings_reset
   - board: seeeduino_xiao_ble
